libcurses/ripoffline.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: ripoffline.c,v 1.3 2017/01/24 17:27:30 roy Exp $	*/
+/*	$NetBSD: ripoffline.c,v 1.4 2018/10/02 17:35:44 roy Exp $	*/
 
 /*-
  * Copyright (c) 2017 The NetBSD Foundation, Inc.
@@ -51,7 +51,7 @@ ripoffline(int line, int (*init)(WINDOW *, int))
 {
 
 #ifdef DEBUG
-	__CTRACE(__CTRACE_SCREEN, "ripoffline: %d\n", line);
+	__CTRACE(__CTRACE_WINDOW, "ripoffline: %d\n", line);
 #endif
 
 	if (nrips >= MAX_RIPS || init == NULL)
@@ -68,16 +68,16 @@ ripoffline(int line, int (*init)(WINDOW *, int))
  *	Returns the number of ripped lines from the screen.
  */
 int
-__rippedlines(const SCREEN *screen)
+__rippedlines(const SCREEN *screen, int line)
 {
 	const struct __ripoff *rip;
 	int i, n;
 
 	n = 0;
 	for (i = 0, rip = screen->ripped; i < screen->nripped; i++, rip++) {
-		if (rip->nlines < 0)
+		if (line < 1 && rip->nlines < 0)
 			n += -rip->nlines;
-		else
+		else if (line > 0 && rip->nlines > 0)
 			n += rip->nlines;
 	}
 	return n;
@@ -90,38 +90,40 @@ __rippedlines(const SCREEN *screen)
  *	this implemenation allows for N lines if needed.
  */
 int
-__ripoffscreen(SCREEN *screen, int *rtop)
+__ripoffscreen(SCREEN *screen)
 {
-	int i, nlines;
+	int i, nlines, rbot, rtop;
 	const struct ripoff *srip;
 	struct __ripoff *rip;
 	WINDOW *w;
 
-	*rtop = 0;
 	rip = screen->ripped;
+	rbot = LINES;
+	rtop = 0;
 	for (i = 0, srip = ripoffs; i < nrips; i++, srip++) {
 		if (srip->nlines == 0)
 			continue;
 		nlines = srip->nlines < 0 ? -srip->nlines : srip->nlines;
 		w = __newwin(screen, nlines, 0,
-		    srip->nlines < 0 ? LINES - nlines : *rtop,
-		    0, FALSE);
+		    srip->nlines < 0 ? rbot - nlines : rtop,
+		    0, FALSE, FALSE);
 		if (w != NULL) {
 			rip->win = w;
 			rip->nlines = srip->nlines;
 			rip++;
 			screen->nripped++;
-			if (rip->nlines > 0)
-				(*rtop) += rip->nlines;
-			LINES -= nlines;
+			if (srip->nlines > 0)
+				rtop += nlines;
+			else
+				rbot -= nlines;
 		}
 		if (srip->init(w, COLS) == ERR)
 			return ERR;
 #ifdef DEBUG
 		if (w != NULL)
-			__CTRACE(__CTRACE_SCREEN,
-			    "newterm: ripped %d lines from the %s\n",
-			    nlines, srip->nlines < 0 ? "bottom" : "top");
+			__CTRACE(__CTRACE_WINDOW,
+			    "newterm: %p ripped %d line(s) from the %s\n",
+			    w, nlines, srip->nlines < 0 ? "bottom" : "top");
 #endif
 	}
 	nrips = 0; /* Reset the stack. */
@@ -147,6 +149,22 @@ __ripoffresize(SCREEN *screen)
 			mvwin(rip->win, rbot + rip->nlines, 0);
 			rbot += rip->nlines;
 		}
+		wnoutrefresh(rip->win);
+	}
+}
+
+/*
+ *  __ripofftouch --
+ *	Displays the ripped off lines from initscr.
+ */
+void
+__ripofftouch(SCREEN *screen)
+{
+	int i;
+	struct __ripoff *rip;
+
+	for (i = 0, rip = screen->ripped; i < screen->nripped; i++, rip++) {
+		touchwin(rip->win);
 		wnoutrefresh(rip->win);
 	}
 }
